[project]
authors = [{ email = "seria.ati@gmail.com", name = "seriaati" }]
dependencies = [
  "aiohttp-client-cache[sqlite]>=0.12.4",
  "fastapi>=0.114.0",
  "pydantic>=2.9.1",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.6",
]
description = "Fix Facebook reel embeds on Discord."
license = { file = "LICENSE" }
name = "fxfacebook"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pyright]
typeCheckingMode = "standard"
